@@ -1,2 +1,2 @@
 # Host: OpenBSD/hppa
-NATDEPFILES= fork-child.o inf-ptrace.o hppabsd-nat.o
+NATDEPFILES= fork-child.o inf-ptrace.o obsd-nat.o hppaobsd-nat.o
