@@ -1,3 +1,12 @@
+2015-03-05  Mark Kettenis  <kettenis@gnu.org>
+
+	* hppabsd-nat.c: Remove file.
+	* hppaobsd-nat.c: New file.
+	* Makefile.in (ALLDEPFILES): Remove hppabsd-nat.c.  Add
+	hppaobsd-nat.c.
+	* config/pa/obsd.mh (NATDEPFILES): Replace hppabsd-nat.o with
+	hppaobsd-nat.o.
+
 2015-03-04  Pedro Alves  <palves@redhat.com>
 
 	* target.h (struct target_ops) <to_decr_pc_after_break>: Delete.
